<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_suggest" />

        <com.dab.medireminder.customview.UITextViewCustom
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/suggest"
            android:textColor="@color/blue_1"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/set_default_engine_google"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/cbSuggest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/do_not_show_again"
            android:textColor="@color/blue_1"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnIgnore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/color_text"
            android:gravity="center"
            android:padding="10dp"
            android:textStyle="bold"
            android:text="@string/warning_ignore"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/btnYes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/blue_1"
            android:gravity="center"
            android:padding="10dp"
            android:textStyle="bold"
            android:text="@string/warning_yes"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>